--- a/Python 100 days projects/043 colour vocab website/style.css
+++ b/Python 100 days projects/043 colour vocab website/style.css
@@ -1,3 +1,23 @@
- html {
-    background:blue
- }
+.color-title{
+    font-weight: normal;
+}
+
+#red{
+    color:red
+}
+
+#blue{
+    color:blue
+}
+
+#orange{
+    color: orange
+}
+
+#green{
+    color: green
+}
+
+#yellow{
+    color: yellow
+}
