--- a/Python 100 days projects/056 my personal name card/templates/index.html
+++ b/Python 100 days projects/056 my personal name card/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TonyVSK</title>
+    <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
     <h1>I'm TonyVSK</h1>
