steps 5 and 6 done

--- a/Python 100 days projects/059 blog flask with css/templates/footer.html
+++ b/Python 100 days projects/059 blog flask with css/templates/footer.html
@@ -29,7 +29,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2024</div>
+                        <div class="small text-center text-muted fst-italic">Copyright &copy; TonyVSK 2024</div>
                     </div>
                 </div>
             </div>
