costumization with profile done

--- a/Python 100 days projects/060 post requests with flask and html forms/templates/post.html
+++ b/Python 100 days projects/060 post requests with flask and html forms/templates/post.html
@@ -8,9 +8,7 @@
                 <div class="post-heading">
                     <h1>{{ post.title }}</h1>
                     <h2 class="subheading">{{ post.subtitle }}</h2>
-                    <span class="meta">Posted by
-                        <a href="#">{{ post.author }}</a>
-                        on {{ post.date }}
+                    <span class="meta">Posted by TonyVSK
                     </span>
                 </div>
             </div>
