--- a/Python 100 days projects/060 post requests with flask and html forms/templates/index.html
+++ b/Python 100 days projects/060 post requests with flask and html forms/templates/index.html
@@ -7,8 +7,8 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
-                            <h1>Clean Blog</h1>
-                            <span class="subheading">A Blog Theme by Start Bootstrap</span>
+                            <h1>TonyVSK Blog</h1>
+                            <span class="subheading">A blog with useless posts</span>
                         </div>
                     </div>
                 </div>
