basic form done

--- a/Python 100 days projects/061 advanced forms with flask/templates/login.html
+++ b/Python 100 days projects/061 advanced forms with flask/templates/login.html
@@ -5,9 +5,15 @@
 		<title>Login</title>
 	</head>
 	<body>
-        <div class="container">
-		<h1>Login</h1>
-        <!-- This is where our form will go. -->
-        </div>
+		<div class="container">
+			<h1>Login</h1>
+
+			<form method="POST" action="{{ url_for('login') }}">
+				{{ form.csrf_token }}
+				{{ form.email.label }} {{ form.email(size=30) }}
+				{{ form.password.label }} {{ form.password(size=30) }}
+				<input type="submit" value="Log In">
+			</form>
+			
+		</div>
 	</body>
-</html>
