--- a/Python 100 days projects/061 advanced forms with flask/templates/index.html
+++ b/Python 100 days projects/061 advanced forms with flask/templates/index.html
@@ -4,6 +4,12 @@
     <title>Secrets</title>
   </head>
   <body>
+    {% extends "base.html" %}
+    {% block title %}Secrets{% endblock %}
+    {% block content %}
+
+
+
     <div class="jumbotron">
       <div class="container">
         <h1>Welcome</h1>
@@ -13,5 +19,9 @@
         >
       </div>
     </div>
+
+
+    
+    {% endblock %}
   </body>
 </html>
