--- a/Python 100 days projects/061 advanced forms with flask/templates/login.html
+++ b/Python 100 days projects/061 advanced forms with flask/templates/login.html
@@ -5,6 +5,13 @@
 		<title>Login</title>
 	</head>
 	<body>
+		{% extends "base.html" %}
+		{% block title %}Secrets{% endblock %}
+		{% block content %}
+
+
+
+
 		<div class="container">
 			<h1>Login</h1>
 
@@ -26,4 +33,9 @@
 			</form>
 
 		</div>
+
+
+		
+
+		{% endblock %}
 	</body>
