--- a/Python 100 days projects/062 Coffee & Wifi project/New folder/templates/cafes.html
+++ b/Python 100 days projects/062 Coffee & Wifi project/New folder/templates/cafes.html
@@ -1,12 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}Restaurants{% endblock %}
+{% block title %}All Cafes{% endblock %}
 
 {% block content %}
-
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-
       <h1>All Cafes</h1>
 
       <table class="table" style="color: white">
@@ -20,15 +18,9 @@
         </tr>
         {% endfor %}
       </table>
-
-      <p><a href=" {{ url_for('home') }} "
-        >Return to index page</a>
-      
-
+      <p><a href="{{ url_for('home') }}">Return to index page</a></p>
     </div>
   </div>
 </div>
 
 {% endblock %}
-
-
