--- a/Python 100 days projects/062 Coffee & Wifi project/templates/index.html
+++ b/Python 100 days projects/062 Coffee & Wifi project/templates/index.html
@@ -8,7 +8,8 @@
   <p class="lead">Want to work in a cafe but need power and wifi?</p>
   <hr class="my-4">
   <p>You've found the right place! Checkout my collection of cafes with data on power socket availability, wifi speed and coffee quality.</p>
-  <a class="btn btn-warning btn-lg" href="#" role="button">Show Me!</a>
+  <p><a class="btn btn-warning btn-lg" href=" {{ url_for('cafes') }} "
+    >Show Me!</a>
 </div>
     </div>
 
