--- a/Python 100 days projects/063 databases SQL - virtual bookshelf/templates/index.html
+++ b/Python 100 days projects/063 databases SQL - virtual bookshelf/templates/index.html
@@ -16,7 +16,9 @@
 
       {% for book in books %} 
       <ul>
-        <li>{{ book.title }}, {{ book.author }}, {{ book.rating }}</li>
+        <li>
+          {{ book.title }}, {{ book.author }}, {{ book.rating }}
+        </li>
       </ul>
       {% endfor %}
 
