--- a/Python 100 days projects/067 blog with RESTful API/templates/index.html
+++ b/Python 100 days projects/067 blog with RESTful API/templates/index.html
@@ -43,11 +43,10 @@
       <!-- TODO: Adding new posts -->
         <a
           class="btn btn-primary float-right"
-          href="TODO: add code to add_new_post here"
+          href="{{url_for('add_new_post')}}"
           >Create New Post</a
         >
       </div>
-
       <!-- Pager-->
       <div class="d-flex justify-content-end mb-4">
         <a class="btn btn-secondary text-uppercase" href="#!">Older Posts →</a>
