--- a/Python 100 days projects/067 blog with RESTful API/templates/make-post.html
+++ b/Python 100 days projects/067 blog with RESTful API/templates/make-post.html
@@ -1,15 +1,17 @@
-{% block content %} {% include "header.html" %}
+{% from "bootstrap5/form.html" import render_form %}
+{% block content %}
+{% include "header.html" %}
 
 <!-- Page Header -->
 <header
   class="masthead"
-  style="background-image: url('../static/assets/img/edit-bg.jpg')"
+  style="background-image: url('../static/assets/img/edit-bg.jpg'"
 >
   <div class="container position-relative px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
         <div class="page-heading">
-          <!-- TODO: Show a different h1 if editing existing post -->
+        <!-- TODO: Show a different h1 if editing existing post -->
           <h1>New Post</h1>
           <span class="subheading"
             >You're going to make a great blog post!</span
@@ -24,9 +26,12 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <!-- TODO:-Add CKEditor and render the form here -->
+        <!-- TODO:-Add CKEditor and render the WTF form here -->
+        {{ render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
+
       </div>
     </div>
   </div>
 </main>
-{% include "footer.html" %} {% endblock %}
+{% include "footer.html" %}
+{% endblock %}
