project 68 created and correction in project 67

--- a/Python 100 days projects/067 blog with RESTful API/templates/make-post.html
+++ b/Python 100 days projects/067 blog with RESTful API/templates/make-post.html
@@ -5,7 +5,7 @@
 <!-- Page Header -->
 <header
   class="masthead"
-  style="background-image: url('../static/assets/img/edit-bg.jpg'"
+  style="background-image: url('../static/assets/img/edit-bg.jpg')"
 >
   <div class="container position-relative px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
