hash and salt password added to security

--- a/Python 100 days projects/068 authentication with flask/templates/secrets.html
+++ b/Python 100 days projects/068 authentication with flask/templates/secrets.html
@@ -4,6 +4,6 @@
 <div class="container">
   <h1 class="title">Welcome, {{ Name }}!</h1>
   <!--TODO: Make a GET request to the /download path-->
-  <a href="#">Download Your File</a>
+  <a href="{{ url_for('download') }}">Download Your File</a> <!-- url_for('download') will redirect to /download at main.py, and there we will have a function to download a file-->
 </div>
 {% endblock %}
